--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,12 @@ requires-python = ">=3.11"
 dependencies = [
     "cython>=3.1.4",
     "matplotlib>=3.10.6",
+    "mediapipe>=0.10.14",
     "numpy>=2.3.3",
     "opencv-python>=4.11.0.86",
     "scikit-image>=0.25.2",
+    "torch>=2.8.0",
+    "torch-geometric>=2.6.1",
     "tqdm>=4.67.1",
     "transforms3d>=0.4.2",
 ]
