--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "scikit-image>=0.25.2",
     "torch>=2.8.0",
     "torch-geometric>=2.6.1",
+    "torchvision>=0.23.0",
     "tqdm>=4.67.1",
     "transforms3d>=0.4.2",
 ]
