--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "cython>=3.1.4",
+    "lmdb>=1.7.5",
     "matplotlib>=3.10.6",
     "mediapipe>=0.10.14",
     "numpy>=2.3.3",
